Fixed alignment issue of wrapped inpage link [](#) formats

--- a/mode/hypermd.scss
+++ b/mode/hypermd.scss
@@ -264,6 +264,9 @@
         }
     
     }
+    .cm-formatting-link-string {
+        text-indent: 0;
+    }
 }
 
 .cm-string.cm-url[class*="cm-list-"] {
